--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,22 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function playSound(e) { // plays sound and enlarges key
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+      if(!audio) return; // stop function from playing altogether
+      audio.currentTime = 0; // rewind to the start
+      audio.play(); // play sound
+      key.classList.add('playing'); // invoke style that enlarges and highlights button/key
+    }
+  function removeTransition(e) { //returns key to normal form
+    if(e.propertyName !== 'transform') return; // skip if it's not a transform
+    console.log(e.propertyName);
+    this.classList.remove('playing');
+  }
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
 
 </script>
 
